app: updated planning and Retrospective methods